src/objects/sales__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>AppointmentConfirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AppointmentConfirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AppointmentRemaonder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AppointmentRemaonder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConfirmationKeyword__c</fullName>
        <label>ConfirmationKeyword</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FollowupKeyword__c</fullName>
        <label>FollowupKeyword</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneHRRemainder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OneHRRemainder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T4HRRemainder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>T4HRRemainder</label>
        <type>Checkbox</type>
    </fields>
    <label>Sales</label>
</CustomObject>